middle section problem is solve

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 					delicious food for you!
 				</p>
 
-				<a href="https://github.com/Khairulhub/food-network" target="_blank"
+				<a
+					href="https://didar115.github.io/food-network-website/"
+					target="_blank"
 					>Order Food</a
 				>
 			</div>
@@ -50,11 +52,15 @@
 			</div>
 			<div class="half-side tf">
 				<h1>About Me</h1>
-				<p class="mt">
+				<p>
 					This is Didar Alam. I am the founder of this hotel. There are so testy
 					and sweets foods and first foods. Many people comes to my hotel daily.
 				</p>
-				<a href="#" class="btn" target="_blank">Contact Me</a>
+				<a
+					href="https://didar115.github.io/food-network-website/"
+					target="_blank"
+					>Contact Me</a
+				>
 			</div>
 		</section>
 
