--- a/index.html
+++ b/index.html
@@ -51,14 +51,20 @@
 				/>
 			</div>
 			<div class="half-side tf">
-				<h1>About Me</h1>
+				<h1>About US</h1>
 				<p>
 					This is Didar Alam. I am the founder of this hotel. There are so testy
 					and sweets foods and first foods. Many people comes to my hotel daily.
+					As a boutique hotel, you have your own unique story to tell. And this
+					needs to be visible in your hotel descriptions and descriptions of
+					your visual content. High-quality images are a big factor. However,
+					this needs to be supported by compelling descriptive content to
+					encourage lookers to become bookers when they are on your hotel
+					website. Because of this, well thought out descriptive content plays a
+					very important role in conversion on your own website as well as on
+					other channels.
 				</p>
-				<a
-					href="https://didar115.github.io/food-network-website/"
-					target="_blank"
+				<a href="https://didar115.github.io/portfolio/" target="_blank"
 					>Contact Me</a
 				>
 			</div>
@@ -102,6 +108,7 @@
 				</p>
 			</div>
 		</section>
+
 		<!-- class div -->
 		<section class="div">
 			<div class="dis-flex div-item">
@@ -119,64 +126,10 @@
 				</div>
 			</div>
 		</section>
-		<!-- <section class="dis-flex">
-			<div class="half-side">
-				<h1 class="h1">Contact Me:</h1>
-				<hr />
-				<h3>Mobile:</h3>
-				<p>017-8846***</p>
-				<h3>Address:</h3>
-				<p>Gazipur, Dhaka Bangladesh</p>
-			</div>
-			<div class="half-side">
-				<form action="">
-					<h1 class="h1">Name:</h1>
-					<input type="text" placeholder="Type your name" required /><br />
-					<h1 class="h1">Email:</h1>
-					<input type="email" placeholder="Type your email" required /><br />
-					<input class="btn1" type="button" value="submit" />
-				</form>
-			</div>
-		</section>
-		<section class="dis-flex">
-			<div class="half-side">
-				<iframe
-					width="600"
-					height="500"
-					id="gmap_canvas"
-					src="https://maps.google.com/maps?q=answar%20accademy,Gazipur&t=&z=13&ie=UTF8&iwloc=&output=embed"
-					frameborder="0"
-					scrolling="no"
-					marginheight="0"
-					marginwidth="0"
-				></iframe>
-			</div>
-			<div class="half-side">
-				<form action="">
-					<h1 class="h1">First Name:</h1>
-					<input
-						type="text"
-						placeholder="Type your fisrt-name"
-						required
-					/><br />
-					<h1 class="h1">Last Name:</h1>
-					<input type="text" placeholder="Type your Last-name" required /><br />
-					<h1 class="h1">Massage:</h1>
-					<textarea
-						name="massage"
-						placeholder="Type your massage"
-						id=""
-						cols="70"
-						rows="10"
-					></textarea>
-					<input class="btn1" type="button" value="SEND" />
-				</form>
-			</div>
-		</section> -->
 
 		<footer>
-			<h1 class="h1"><span class="text-color">FOOD</span> NETWORK</h1>
-			<p class="p">Eta healthy to live healthy. Live healthy to live happy</p>
+			<h2><span class="text-color">FOOD</span> NETWORK</h2>
+			<h3>Eta healthy to live healthy. Live healthy to live happy</h3>
 		</footer>
 	</body>
 </html>
