--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@
 		</section>
 
 		<!-- text=center, class=h1,p for align item center -->
-		<section class="alin-item">
-			<h1 class="h1">My Recipies</h1>
-			<p class="p">
+		<section>
+			<h1 class="center">My Recipies</h1>
+			<p class="center">
 				ZapMeta uses functional cookies and non-personalized content.
 			</p>
-			<p class="p">
+			<p class="center">
 				Click 'OK' to allow us and our partners to use your data for the best
 				experience!
 			</p>
-			<p class="p">Min price:100$</p>
+			<p class="center">Min price:100$</p>
 		</section>
 		<section class="dis-flex">
 			<div class="card tf">
