--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 					>Order Food</a
 				>
 			</div>
-			<div class="half-side tf">
+
+			<div class="half-side tf back-img2">
 				<img src="images/female/Group 8425.png" alt="" />
 			</div>
 		</section>
