--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 
 		<footer>
 			<h2><span class="text-color">FOOD</span> NETWORK</h2>
-			<h3>Eta healthy to live healthy. Live healthy to live happy</h3>
+			<h3>Eat healthy to live healthy. Live healthy to live happy</h3>
 		</footer>
 	</body>
 </html>
